public/stylesheets/style.css
* {
  box-sizing: border-box;
  border-radius: 0 !important; /* square corners */
}

.left { float: left ; }
.right { float: right ; }

#jub-container {
  width: auto;
  height: auto;
}

#jub-row-main {
  margin-left: 0px;
  margin-right: 0px;
  height: 500px;
}

#jub-col-chat {
  padding-right: 0;
}

#jub-col-queue {
  padding-left: 0;
}

body {
  padding-top: 80px;
  font-size: 13px;
  background-color: #161616;
  color: #DDDDEE;
  max-height: 10000000px;
  height: 100%;
}

/* title */
#title {
  color: #DDDDEE;
  padding-right: 20px;
  margin-top: 0;
}


.form-control {
  border: 0px;
  background-color: #222222;
  color: #BBBBBB;
  font-size: 13px;
}

.btn {
  background-color: #3F2C52;
  border-color: #3F2C52;
  color: #fff;
  font-size: 13px;
}

/* jub-style lists */
.jub-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  word-wrap: break-word;
}
.jub-list li {
  padding: 5px 10px;
  background: #111;
  font-size: 13px;
}
.jub-list li:nth-child(odd) { background: #1C1C1C; }

/* player and queue panel commonalities */
#player-panel,
#queue-panel {
  border: 0;
  background-color: #111;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 0px;
}
#player-panel .panel-body,
#queue-panel  .panel-body {
  border: 0;
  background-color: #161616;
  padding: 0 0 0 0;
}
#player-panel .panel-footer,
#queue-panel  .panel-footer {
  font-size: 12px;
}
#player-panel th,
#queue-panel  th {
  padding: 5px 5px 5px 5px;
}

/* player panel */
#player-panel * {
  border: 0;
  background-color: #111;
}
#player-panel {
  width: 484px; /* width of the player */
}
#player-panel .panel-body {
  height: 290px;
}
#current-track {
  color: #DDDDEE;
  font-size: 13px;
}
#current-track {
  font-weight: normal;
}
#time-left {
  min-width: 55px;
  text-align: right;
}

/* video queue */
#video-queue {
  color: #BBBBCC; /* slightly darker text for queue items */
}
#queue-banner {
  background: #111;
}
#queue-label {
  color: #DDDDEE;
  font-size: 13px;
  line-height: 2.4;
}
/* TODO create class for orange buttons */
#queue-panel .btn:hover {
  background-color: #e6e6e6;
  border-color: #adadad;
  color: #333;
}
#shuffle {
  background-color: #942D00 ;
  border-color: #942D00 ;
  float: right ;
  margin-left: 10px;
}
#delete-track {
  background-color: #8B0000 ;
  border-color: #8b0000 ;
  float: right ;
  display: none ;
}
#send-to-top {
  background-color: #005D8B ;
  border-color: #005D8B ;
  float: right ;
  display: none ;
}

/* navbars */
#bottom-nav ul.navbar-nav>li>a,
#messages li>a {
  color: #0097AA;
}

/* top navbar */
.jub-nav-top-item {
  top: 5px;
}
.navbar-fixed-top {
  height: 60px;
}

/* inputs in nav bars */
.jub-nav-input {
  background: #161616;
}

#messages {
  overflow-y:auto;
}

/* current users */
#jubbin-list {
  margin: 0;
  padding: 0;
  font-weight: bold;
  list-style-type: none;
  max-height: 400px;
  overflow-y:auto;
}

#video-queue {
  overflow-y:auto;
}
#video-queue .queue-item * {
  font-weight: normal;
  padding: 0px 0px 0px 0px;
}

/* NOTE if you update these spacing values, update redraw_queue_items */
#video-queue li{
  padding: 3px 3px 3px 3px;
}
#video-queue .queue-item .title {
  margin-right: 4px;
}
#video-queue .queue-item .duration {
  min-width: 55px;
  text-align: right;
  float: right;
}
/*TODO*/
#video-queue .queue-item .queue-chk {
  margin-right: 4px;
}
#queue-context-menu {
  position: absolute;
  display: none;
}
#queue-context-menu .ul {
  background-color: #000;
}

/* nav tabs */
.nav-tabs {
  border-bottom: 0px solid #111;
}
.nav-tabs>li>a {
  border: 0px solid #111;
  color: #AAAABB;
}
.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover,
.nav-tabs>li.active>a:active {
  background-color: #3F2C52;
  border: 0px solid #111;
  color: #FFF;
}
.nav-tabs>li>a:hover,
.nav-tabs>li>a:focus {
  background-color: #2C1E39;
  color: #FFF;
}

/*
 * Autocomplete
 */

/* Hide weird accessibility thing from jquery-ui's autocomplete */
.ui-helper-hidden-accessible { position: absolute; left: -9999px; }
.ui-autocomplete {
  position: absolute; cursor: default;
}

/* TODO maybe use later */
/*.ui-autocomplete-loading {
  background: white url('images/ui-anim_basic_16x16.gif') right center no-repeat;
}*/

/* workarounds */
* html .ui-autocomplete {
  width:1px;
  background-color: #181818;
  color: #DDDDEE;
} /* without this, the menu expands to 100% in IE6 */

.ui-menu {
  list-style:none;
  padding: 5px;
  margin: 0;
  display:block;
}

.ui-menu .ui-menu-item {
  margin:0;
  padding: 0;
  font-size: 12px;
}

.ui-menu .ui-menu-item a {
  background-color: #181818;
  color: #DDDDEE;
  text-decoration:none;
  display:block;
  padding:.2em .4em;
  line-height:1.5;
  zoom:1;
}
.ui-widget-content {
  z-index:9999;
  background: #181818;
  background-color: #181818;
  color: #DDDDEE;
}

.ui-menu .ui-menu-item a.ui-state-hover,
.ui-menu .ui-menu-item a.ui-state-active {
  margin: -1px;
}

.form-control {
  font-size: 13px;
}

